(fix) checked color on dark mode

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -267,7 +267,7 @@
                     }
                 }
     
-                &.--Checked {
+                &.--checked {
                     color: var(--color-grey);
     
                     &::before {
@@ -277,10 +277,6 @@
                         background-size: cover;
                         line-height: 0.4;
                         position: absolute;
-                        
-                        @include dark {
-                            background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.00001 15.5857L19.2929 5.29285L20.7071 6.70706L9.00001 18.4142L3.29291 12.7071L4.70712 11.2928L9.00001 15.5857Z' fill='%23" + str-replace(#{$color-background}, '#', '') + "'/%3E%3C/svg%3E%0A");
-                        }
                     }
                 }
     
@@ -289,7 +285,7 @@
                 //         border-color: rgba($color-background, 0.2);
                 //     }
                     
-                //     &.--Checked {
+                //     &.--checked {
                 //         &::before {
                 //             content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M19.574 7.42603C20.142 7.99406 20.142 8.91503 19.574 9.48306L11.2103 17.8467C10.6423 18.4147 9.72133 18.4147 9.1533 17.8467L4.42603 13.1194C3.85799 12.5514 3.85799 11.6304 4.42603 11.0624C4.99406 10.4944 5.91503 10.4944 6.48306 11.0624L10.1818 14.7611L17.5169 7.42603C18.085 6.85799 19.0059 6.85799 19.574 7.42603Z' fill='%23" + str-replace(#{$color-background}, '#', '') +"'/%3E%3C/svg%3E%0A");
                 //             border-color: $color-danger;
